--- a/index.html
+++ b/index.html
@@ -1,57 +1,75 @@
-<!DOCTYPE html>
-<html lang="tr">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Video / Ses İndirici</title>
-  <style>
-    body{font-family:Arial,Helvetica,sans-serif;background:#fafafa;
-         display:flex;flex-direction:column;align-items:center;justify-content:center;
-         height:100vh;padding:24px}
-    h1{color:#222;margin-bottom:12px}
-    .card{background:#fff;padding:24px;border-radius:12px;box-shadow:0 4px 16px rgba(0,0,0,.08)}
-    input,select,button{width:100%;max-width:420px;padding:12px;margin-top:12px;font-size:16px}
-    button{background:#0069ff;color:#fff;border:none;border-radius:8px;cursor:pointer;transition:.2s}
-    button:hover{background:#0052c2}
-    #result{margin-top:20px}
-  </style>
-</head>
-<body>
-  <div class="card">
-    <h1>Video / Ses İndir</h1>
-    <input id="videoURL" placeholder="YouTube veya başka video linki">
-    <select id="format">
-      <option value="mp4">MP4 (Video)</option>
-      <option value="mp3">MP3 (Ses)</option>
-    </select>
-    <button onclick="download()">İndir</button>
-    <div id="result"></div>
-  </div>
+<!DOCTYPE html><html lang="tr"><head><meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>GitHub Video / MP3 İndirici</title>
+<style>
+body{font-family:Arial;background:#fafafa;display:flex;flex-direction:column;align-items:center;
+      padding:32px} h1{margin:8px} .card{background:#fff;padding:24px;border-radius:12px;
+      box-shadow:0 4px 16px rgba(0,0,0,.08);max-width:460px;width:100%}
+input,select,button{width:100%;padding:12px;margin-top:12px;font-size:15px}button{
+background:#0069ff;color:#fff;border:none;border-radius:8px;cursor:pointer}button:hover{background:#004db7}
+#log{margin-top:20px;white-space:pre-wrap;font-size:14px}
+</style></head><body>
+<div class="card">
+  <h1>Video / Ses İndir</h1>
+  <input id="url" placeholder="YouTube linki">
+  <select id="fmt"><option value="mp4">MP4 (video)</option><option value="mp3">MP3 (ses)</option></select>
+  <button onclick="run()">İndir</button>
+  <div id="log"></div>
+</div>
 
-  <script>
-    async function download(){
-      const url=document.getElementById('videoURL').value.trim();
-      const format=document.getElementById('format').value;
-      if(!url){alert("Lütfen bir link girin");return}
+<script>
+const OWNER  = "GitHubKullanıcın";   // <= değiştir
+const REPO   = "DepoAdı";           // <= değiştir
+const WFLOW  = "video-download.yml"; // workflow dosya adı
 
-      document.getElementById('result').innerHTML="⏳ İşleniyor...";
-      try{
-        const res=await fetch("https://SENIN-REPLIT-URLIN.com/download",{
-          method:"POST",
-          headers:{'Content-Type':'application/json'},
-          body:JSON.stringify({url,format})
-        });
-        const data=await res.json();
-        if(data.downloadUrl){
-          document.getElementById('result').innerHTML=
-            `<a href="${data.downloadUrl}" download>📥 Dosyayı İndir</a>`;
-        }else{
-          document.getElementById('result').textContent="İndirme başarısız.";
-        }
-      }catch(e){
-        document.getElementById('result').textContent="Sunucu hatası: "+e;
+async function run(){
+  const url = document.getElementById("url").value.trim();
+  const fmt = document.getElementById("fmt").value;
+  if(!url) return alert("Link gir");
+
+  // 1) Token al
+  let token = localStorage.getItem("gh_pat");
+  if(!token){
+    token = prompt("Kişisel erişim token’ını yapıştır (sadece ilk sefer):");
+    if(!token) return;
+    localStorage.setItem("gh_pat", token);
+  }
+
+  // 2) workflow_dispatch
+  log("⏳ İşlem kuyruğa alınıyor…");
+  await fetch(`https://api.github.com/repos/${OWNER}/${REPO}/actions/workflows/${WFLOW}/dispatches`,
+    {method:"POST",
+     headers:{Authorization:`Bearer ${token}`,
+              "X-GitHub-Api-Version":"2022-11-28",
+              "Accept":"application/vnd.github+json"},
+     body:JSON.stringify({ref:"main",inputs:{url,format:fmt}})
+    });
+
+  // 3) Son çalışmayı izle
+  let runId;
+  while(true){
+    await sleep(10000); // 10 sn
+    const runs=await fetchJSON(`https://api.github.com/repos/${OWNER}/${REPO}/actions/runs?per_page=1&event=workflow_dispatch`,token);
+    if(runs.workflow_runs?.length){
+      const run=runs.workflow_runs[0];
+      if(!runId) runId=run.id;
+      if(run.id!==runId) continue;
+      log(`⏳ Durum: ${run.status} (${run.conclusion||"..."})`);
+      if(run.status==="completed"){
+        if(run.conclusion!=="success"){log("❌ Çalışma başarısız");return;}
+        break;
       }
     }
-  </script>
-</body>
-</html>
+  }
+
+  // 4) Geçici release bul
+  const rel = await fetchJSON(`https://api.github.com/repos/${OWNER}/${REPO}/releases?per_page=1`,token);
+  const asset = rel[0]?.assets?.find(a=>a.name.endsWith(fmt));
+  if(!asset){ log("❌ Dosya bulunamadı"); return;}
+  const link = asset.browser_download_url;
+  log(`✅ Hazır → <a href="${link}" target="_blank" download>Dosyayı indir</a>`);
+}
+function log(msg){document.getElementById("log").innerHTML=msg;}
+const sleep = ms=>new Promise(r=>setTimeout(r,ms));
+const fetchJSON=(u,t)=>fetch(u,{headers:{Authorization:`Bearer ${t}`,"Accept":"application/vnd.github+json"}}).then(r=>r.json());
+</script></body></html>
