--- a/index.html
+++ b/index.html
@@ -1,75 +1,44 @@
-<!DOCTYPE html><html lang="tr"><head><meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>GitHub Video / MP3 İndirici</title>
-<style>
-body{font-family:Arial;background:#fafafa;display:flex;flex-direction:column;align-items:center;
-      padding:32px} h1{margin:8px} .card{background:#fff;padding:24px;border-radius:12px;
-      box-shadow:0 4px 16px rgba(0,0,0,.08);max-width:460px;width:100%}
-input,select,button{width:100%;padding:12px;margin-top:12px;font-size:15px}button{
-background:#0069ff;color:#fff;border:none;border-radius:8px;cursor:pointer}button:hover{background:#004db7}
-#log{margin-top:20px;white-space:pre-wrap;font-size:14px}
-</style></head><body>
-<div class="card">
-  <h1>Video / Ses İndir</h1>
-  <input id="url" placeholder="YouTube linki">
-  <select id="fmt"><option value="mp4">MP4 (video)</option><option value="mp3">MP3 (ses)</option></select>
-  <button onclick="run()">İndir</button>
-  <div id="log"></div>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>YouTube Video Downloader</title>
+</head>
+<body>
+  <h1>YouTube Video İndirici</h1>
+  <form id="download-form">
+    <input type="text" id="videoUrl" placeholder="YouTube linkini yapıştır" required>
+    <select id="format">
+      <option value="mp4">MP4</option>
+      <option value="mp3">MP3</option>
+    </select>
+    <button type="submit">İndir</button>
+  </form>
+  <p id="response"></p>
 
-<script>
-const OWNER  = "GitHubKullanıcın";   // <= değiştir
-const REPO   = "DepoAdı";           // <= değiştir
-const WFLOW  = "video-download.yml"; // workflow dosya adı
+  <script>
+    const form = document.getElementById("download-form");
+    const response = document.getElementById("response");
 
-async function run(){
-  const url = document.getElementById("url").value.trim();
-  const fmt = document.getElementById("fmt").value;
-  if(!url) return alert("Link gir");
+    form.onsubmit = async (e) => {
+      e.preventDefault();
+      response.innerText = "İşleniyor...";
+      const videoUrl = document.getElementById("videoUrl").value;
+      const format = document.getElementById("format").value;
 
-  // 1) Token al
-  let token = localStorage.getItem("gh_pat");
-  if(!token){
-    token = prompt("Kişisel erişim token’ını yapıştır (sadece ilk sefer):");
-    if(!token) return;
-    localStorage.setItem("gh_pat", token);
-  }
+      const res = await fetch("https://senin-render-linkin.onrender.com/download", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ url: videoUrl, format })
+      });
 
-  // 2) workflow_dispatch
-  log("⏳ İşlem kuyruğa alınıyor…");
-  await fetch(`https://api.github.com/repos/${OWNER}/${REPO}/actions/workflows/${WFLOW}/dispatches`,
-    {method:"POST",
-     headers:{Authorization:`Bearer ${token}`,
-              "X-GitHub-Api-Version":"2022-11-28",
-              "Accept":"application/vnd.github+json"},
-     body:JSON.stringify({ref:"main",inputs:{url,format:fmt}})
-    });
-
-  // 3) Son çalışmayı izle
-  let runId;
-  while(true){
-    await sleep(10000); // 10 sn
-    const runs=await fetchJSON(`https://api.github.com/repos/${OWNER}/${REPO}/actions/runs?per_page=1&event=workflow_dispatch`,token);
-    if(runs.workflow_runs?.length){
-      const run=runs.workflow_runs[0];
-      if(!runId) runId=run.id;
-      if(run.id!==runId) continue;
-      log(`⏳ Durum: ${run.status} (${run.conclusion||"..."})`);
-      if(run.status==="completed"){
-        if(run.conclusion!=="success"){log("❌ Çalışma başarısız");return;}
-        break;
+      const data = await res.json();
+      if (data.success) {
+        response.innerHTML = `<a href="${data.download_url}" target="_blank">İndir</a>`;
+      } else {
+        response.innerText = "Hata: " + data.message;
       }
-    }
-  }
-
-  // 4) Geçici release bul
-  const rel = await fetchJSON(`https://api.github.com/repos/${OWNER}/${REPO}/releases?per_page=1`,token);
-  const asset = rel[0]?.assets?.find(a=>a.name.endsWith(fmt));
-  if(!asset){ log("❌ Dosya bulunamadı"); return;}
-  const link = asset.browser_download_url;
-  log(`✅ Hazır → <a href="${link}" target="_blank" download>Dosyayı indir</a>`);
-}
-function log(msg){document.getElementById("log").innerHTML=msg;}
-const sleep = ms=>new Promise(r=>setTimeout(r,ms));
-const fetchJSON=(u,t)=>fetch(u,{headers:{Authorization:`Bearer ${t}`,"Accept":"application/vnd.github+json"}}).then(r=>r.json());
-</script></body></html>
+    };
+  </script>
+</body>
+</html>
